--- a/paragraf.html
+++ b/paragraf.html
@@ -5,7 +5,8 @@
         <meta charset="utf-8">
     </head>
     <body><h1>Heading Level 1</h1>
-    <p>paragraf adalah kumpulan dari beberapa kalimat.</p>
+    <p>paragraf adalah kumpulan dari beberapa kalimat.<br> adalah kumpulan dari beberapa kata. Dan kata adalah kumpulan dari beberapa huruf.</p>
+    <hr>
     <h2>Heading Level 2</h2>
     <h3>Heading Level 3</h3>
     <h4>Heading Level 4</h4>
