--- a/orderlist.html
+++ b/orderlist.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
 </head>
 <body>
-    <h1>My Favorite Colors</h1>
-    <ol>
-        <li>Blue</li>
-        <li>Teal</li>
-        <li>Red</li>
-    </ol>
+    <h1>Sample Description List</h1>
+    <dl>
+        <dt>FTR</dt>
+            <dd>bdgbs uifhsvdvh hjhsfdvehgvvs. </dd>
+        <dt>HTTP</dt>
+            <dd>bfuyd  hjfgfjbvdg hdvdhhd nfhfh.</dd>
+    </dl>
 </body>
 </html>
